--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@google-cloud/functions-framework": "^3.1.2",
     "@google-cloud/pubsub": "^3.1.0",
     "@google-cloud/storage": "^6.2.3",
-    "escape-html": "^1.0.3"
+    "escape-html": "^1.0.3",
+    "imagemagick-stream": "^4.1.1",
+    "sharp": "^0.30.7"
   },
   "repository": {
     "type": "git",
